> ported to SBCL because of better sockets [done]
> getting the serverlist directly [done]
> support cleaning clothes [done]
> Get better feedback @ (clean-my-clothing) [done]
> Use echowash.php instead of the full-site. [done]
> Print shorter links @ (succsess) [done]
> Write some (first-init) function [done]
> Get working utf-8 support [done]
> Make responses more understandable [done]
> Remove "" (empty strings) from (get-server-list) [done]
> Add the washi.lisp-logo [done]
> Store obj-lists locally during search-mode (get new one if search fails) [done]
> Bug-fix because I got a wired list from 1 server (see remove #\Return) [done]
> Removed '|| from obj-lists, because there's no need for them [done]
> Reload *server-list* too if search fails [done]
> Add @Revengedays random-word API [done]
> Bug-fix html-entities from (send-random-word) [done]
> Use random-server to send the laundry into waschi [done]
> Search all servers and do not stop at the first one [done]
> Ignore Errors for usockets @ found-sites - just return NIL [done] 
> Remove Keys from (get-server-list), because they are not needed anymore [done]
> Add Username and Password to clean-my-clothing [done]
> Add change-username [done]
> Tries to take-away your object when found. [done]
> Retries send object on a different server, if post gets blocked [done]
> Refetches server-list and returns to search-ui on an empty *server-list* [done]
> Code beauty [done]
> Remove date from version [done]
> Implement a take-all functions, which tries to grep any clothes with given user/pwd [done]
> Moving code to github, because of better version control. [done]